--- a/app/views/api/kpi_entries/analyse.html.erb
+++ b/app/views/api/kpi_entries/analyse.html.erb
@@ -31,7 +31,7 @@
           var view = $("#entity-group-id-hidden").val();
           var view_text =$("#entity-group-name-hidden").val();
           var method = $("#average-hidden").val()
-          var interval = $("#frequency-hidden").val(), type = "line", chart_body_close_validate;
+          var interval = $("#frequency-hidden").val(), type = $("#type-hidden").val(), chart_body_close_validate;
           var begin_time = $("#start-time-hidden").val(), end_time = $("#end-time-hidden").val();
 
           if($("#chart-body").css("display") == "block") {
