--- a/app/views/api/kpi_entries/analyse.html.erb
+++ b/app/views/api/kpi_entries/analyse.html.erb
@@ -49,6 +49,7 @@
                }
 
                var option = {
+                    show_loading:false,
                     kpi : kpi_name,
                     kpi_id : kpi,
                     target : "chart-container",
