--- a/app/assets/stylesheets/Entry.css
+++ b/app/assets/stylesheets/Entry.css
@@ -247,5 +247,7 @@
     margin-left:20px;
     margin-top:15px;
 }
+/******************************************************************** 上传失败跳出来的div
+***************************************************************************************/
 
 
