--- a/app/views/kpi_entries/new.html.erb
+++ b/app/views/kpi_entries/new.html.erb
@@ -51,7 +51,7 @@
                </div>
           </div>
           <p class="upload-parsing" id="parsing-load">
-               正在解析文件...
+               支持格式excel、csv
           </p>
           <div class="btn upload-finish" id="upload-kpi-finish">
                完成
