--- a/app/views/kpi_entries/new.html.erb
+++ b/app/views/kpi_entries/new.html.erb
@@ -44,8 +44,8 @@
           <hr />
           <div class="content">
                <div class="upload-file">
-                    <a class="btn btn-primary upload-btn" onclick="$('#kpi-entry-uploader').click()">上传模板(最大为20M)</a>
-                    <input id="kpi-entry-uploader" class="kpi-entry-upload" type="file" style="display: none;" multiple="true" data-url="/kpi_entries/import" name="files[]">
+                    <a class="btn btn-primary upload-btn" onclick="$('#kpi-entry-uploader').click()">上传数据文件(最大为20M)</a>
+                    <input id="kpi-entry-uploader" class="kpi-entry-upload" type="file" style="display: none;"  data-url="/kpi_entries/import" name="files[]">
                     <div id="kpi-entry-uploader-preview">
                     </div>
                </div>
