--- a/app/views/kpi_entries/new.html.erb
+++ b/app/views/kpi_entries/new.html.erb
@@ -3,7 +3,7 @@
           <%= t 'entry.desc.entry'%>
      </li>
      <div class="btn btn-primary upload-kpi-btn" id="upload-kpi-btn">
-          上传KPI
+           <%= I18n.t('fix.upload_kpi')%>
      </div>
      <li class="<%= 'active' if @f==KpiFrequency::Hourly%>" interval="90" show_section="hour">
           <a  href="/kpi_entries/new?f=<%= KpiFrequency::Hourly%>"><%= t 'manage.kpi.freq_item.hourly'%></a>
@@ -40,21 +40,23 @@
 <div class="modal-outer" id="upload-kpi">
      <div class="upload-kpi modal-inner">
           <i class="icon-remove" id="upload-kpi-close"></i>
-          <a class="btn btn-primary download-btn">下载模板</a>
+          <a class="btn btn-primary download-btn" href="/files/template/kpi_entry_template.zip">
+           <%= I18n.t('fix.download_template')%>
+          </a>
           <hr />
           <div class="content">
                <div class="upload-file">
-                    <a class="btn btn-primary upload-btn" onclick="$('#kpi-entry-uploader').click()">上传数据文件(最大为20M)</a>
+                    <a class="btn btn-primary upload-btn" onclick="$('#kpi-entry-uploader').click()">      <%= I18n.t('fix.upload_data_file')%></a>
                     <input id="kpi-entry-uploader" class="kpi-entry-upload" type="file" style="display: none;"  data-url="/kpi_entries/import" name="files[]">
                     <div id="kpi-entry-uploader-preview">
                     </div>
                </div>
           </div>
           <p class="upload-parsing" id="parsing-load">
-               支持格式excel、csv
+                <%= I18n.t('fix.kpi_upload_support_format')%>
           </p>
           <div class="btn upload-finish" id="upload-kpi-finish">
-               完成
+              <%= I18n.t('fix.upload_finish')%>
           </div>
      </div>
 </div>
@@ -62,11 +64,11 @@
 <div class="modal-outer false-alert" id="false-alert">
   <div class="modal-inner false-alert-inner">
     <i class="icon-remove" id="false-close"></i>
-    <label class="title">错误</label>
-    <p>您在上传中出现了错误，无法完成上传</p>
-    <p><a href="" id="error-report">点击这里</a>下载错误报告，帮助您正确上传</p>
+    <label class="title"><%= I18n.t('fix.error_title')%></label>
+    <p><%= I18n.t('fix.upload_error')%></p>
+    <p><a href="" id="error-report"><%= I18n.t('fix.click_download_error')%></a></p>
     <div class="btn false-close-btn" id="false-close-btn">
-      关闭
+      <%= I18n.t('fix.close')%>
     </div>
   </div>
 </div>
