--- a/app/views/kpi_entries/new.html.erb
+++ b/app/views/kpi_entries/new.html.erb
@@ -43,6 +43,7 @@
           <a class="btn btn-primary download-btn" href="/files/template/kpi_entry_template.zip">
            <%= I18n.t('fix.download_template')%>
           </a>
+          <p class="template-info"><i class="icon-info-sign"></i> 请根据模板上传数据文件</p>
           <hr />
           <div class="content">
                <div class="upload-file">
