--- a/app/views/emails/_form.html.erb
+++ b/app/views/emails/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :sender %>
   </div>
   <div class="field">
-    <%= f.label :reveivers %><br />
-    <%= f.text_field :reveivers %>
+    <%= f.label :receivers %><br />
+    <%= f.text_field :receivers %>
   </div>
   <div class="field">
     <%= f.label :file_path %><br />
