--- a/app/views/templates/analysis_pdf.html.erb
+++ b/app/views/templates/analysis_pdf.html.erb
@@ -72,7 +72,7 @@
             if(option.chart_body_close_validate) {
                 show_chart_body(option);
             }
-            ANALYTICS.form_chart(option);
+           ANALYTICS.form_chart_without_ajax(option, data);
         }
     }
 </script>
