--- a/app/views/layouts/pdfs/analysis.html.erb
+++ b/app/views/layouts/pdfs/analysis.html.erb
@@ -2,14 +2,73 @@
 <html>
   <head>
     <title>EPM Analysis</title>
-    <%= javascript_include_tag "jquery-1.8.2.min.js"%>
-    <%= javascript_include_tag "wayne-base.js"%>
-    <%= javascript_include_tag "i18n.js"%>
-    <%= javascript_include_tag "i18n/translations.js"%>
+    <%= wicked_pdf_javascript_include_tag "jquery-1.8.2.min.js"%>
+    <%= wicked_pdf_javascript_include_tag "wayne-base.js"%>
+    <%= wicked_pdf_javascript_include_tag "i18n.js"%>
+    <%= wicked_pdf_javascript_include_tag "i18n/translations.js"%>
+    <%= wicked_pdf_javascript_include_tag "highstock.js"%>
+    <%= wicked_pdf_javascript_include_tag "high_chart_template_analytic.js"%>
+    <%= wicked_pdf_javascript_include_tag "Analytics_init.js"%>
+
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
+
+    <script>
+        var data=jQuery.parseJSON($("#data-hidden").val());
+        $(document).ready(function() {
+            prepare_form_cchart();
+        });
+        function prepare_form_cchart() {
+            var kpi = $("#kpi-id-hidden").val();
+            var kpi_name= $("#kpi-name-hidden").val();
+            var view = $("#entity-group-id-hidden").val();
+            var view_text =$("#entity-group-name-hidden").val();
+            var method = $("#average-hidden").val();
+            var interval = $("#frequency-hidden").val(), type = $("#type-hidden").val(), chart_body_close_validate;
+            var begin_time = $("#start-time-hidden").val(), end_time = $("#end-time-hidden").val();
+
+            if($("#chart-body").css("display") == "block") {
+                chart_body_close_validate = false;
+            } else {
+                chart_body_close_validate = true;
+            }
+            if(kpi && begin_time && view) {
+                if(end_time) {
+                    var compare_result = compare_time(begin_time, end_time);
+                    begin_time = compare_result.begin;
+                    end_time = compare_result.end;
+                } else {
+                    end_time = begin_time
+                }
+
+                var option = {
+                    show_loading:false,
+                    kpi : kpi_name,
+                    kpi_id : kpi,
+                    target : "chart-container",
+                    begin_time : begin_time,
+                    end_time : end_time,
+                    type : type,
+                    interval : interval,
+                    count : ANALYTICS.chartSeries.count + 1,
+                    view : view,
+                    view_text : view_text,
+                    method : 0,
+                    chart_body_close_validate : chart_body_close_validate
+                };
+                ANALYTICS.chartSeries.addCount();
+                ANALYTICS.chartSeries.id_give();
+                option.id = ANALYTICS.chartSeries.id;
+                ANALYTICS.chartSeries.addSeries(option);
+                if(option.chart_body_close_validate) {
+                    show_chart_body(option);
+                }
+                ANALYTICS.form_chart(option);
+            }
+        }
+    </script>
+
   </head>
   <body>
     <%= yield %>
   </body>
-  <%= yield :javascript_includes%>
 </html>
