--- a/app/views/layouts/pdfs/analysis.html.erb
+++ b/app/views/layouts/pdfs/analysis.html.erb
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>EPM Analysis</title>
-    <%= javascript_include_tag "jquery-1.8.2.min.js"%>
-    <%= javascript_include_tag "wayne-base.js"%>
-    <%= javascript_include_tag "i18n.js"%>
-    <%= javascript_include_tag "i18n/translations.js"%>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
   </head>
   <body>
