--- a/app/views/layouts/pdfs/analysis.html.erb
+++ b/app/views/layouts/pdfs/analysis.html.erb
@@ -5,9 +5,13 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
 
+    <%= wicked_pdf_stylesheet_link_tag "application" -%>
+    <%= wicked_pdf_javascript_include_tag "application" %>
+
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
   </head>
   <body>
+  <p>Layout</p>
     <%= yield %>
   </body>
   <%= yield :javascript_includes%>
