--- a/app/views/layouts/pdfs/analysis.html.erb
+++ b/app/views/layouts/pdfs/analysis.html.erb
@@ -2,16 +2,15 @@
 <html>
   <head>
     <title>EPM Analysis</title>
-    <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
-
     <%= wicked_pdf_stylesheet_link_tag "application" -%>
     <%= wicked_pdf_javascript_include_tag "application" %>
-
+    <script type="text/javascript">
+        $("#content").text("dasds");
+    </script>
     <meta http-equiv='content-type' content='text/html; charset=utf-8' />
   </head>
   <body>
-  <p>Layout</p>
+  <p id="content">Layout</p>
     <%= yield %>
   </body>
   <%= yield :javascript_includes%>
