--- a/app/views/templates/demo_pdf.html.erb
+++ b/app/views/templates/demo_pdf.html.erb
@@ -2,11 +2,16 @@
 <html>
 <head>
   <title>EPM Analysis <% if wicked_pdf_javascript_include_tag "application" %> Tett<% end %></title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
   <%= wicked_pdf_stylesheet_link_tag "application" %>
   <%= wicked_pdf_javascript_include_tag "application" %>
 
-  <meta http-equiv='content-type' content='text/html; charset=utf-8' />
-  <script></script>
+  <script type="text/javascript">
+      $(function(){
+          $("#t").text("sdsdsds");
+      });
+  </script>
 </head>
 <body>
 <p id="content">Layout</p>
