--- a/app/views/emails/index.html.erb
+++ b/app/views/emails/index.html.erb
@@ -53,7 +53,7 @@
           type:"POST",
           success:function(data){
               if(data.result){
-                  alert("Success Send!");
+                  //alert("Success Send!");
               }
           }
       });
