--- a/app/views/templates/demo_pdf.html.erb
+++ b/app/views/templates/demo_pdf.html.erb
@@ -42,7 +42,6 @@
     </tr>
     </thead>
     <tbody style="color:#5f5f5f;font-weight:300" id="table-data">
-
     </tbody>
   </table>
 </div>
@@ -57,6 +56,7 @@
 <input type="hidden" value="<%= datas[:frequency]%>" id="frequency-hidden" />
 <input type="hidden" value="<%= datas[:type]%>" id="type-hidden" />
 <input type="hidden" value="<%= datas[:data]%>" id="data-hidden" />
+<input type="hidden" value="<%= datas[:table_data]%>" id="table-data-hidden" />
 
 <script>
   function generate_table(){
@@ -65,7 +65,7 @@
       for(var i in data.current){
           var row = $('<tr></tr>');
           var date = standardParse(data.date[i]).date;
-          row.append('<td style="padding:8px;border:1px solid #ddd;color:#000">'+date.toDateString()+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.current[i]+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.target_max[i]+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.target_min[i]+'</td>');
+          row.append('<td style="padding:8px;border:1px solid #ddd;color:#000">'+date.toDateString()+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.current[i]+data.unit[i]+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.target_max[i]+data.unit[i]+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.target_min[i]+data.unit[i]+'</td>');
           $("#table-data").append(row);
       }
   }
