--- a/app/views/templates/demo_pdf.html.erb
+++ b/app/views/templates/demo_pdf.html.erb
@@ -23,22 +23,22 @@
 <body>
 
 <div style="width:1024px;margin:0 auto;">
-  <p id="title" style="text-align:center;font-size:25px;font-weight:300;margin-bottom:10px;">EPM报告</p>
-  <div class="chart-container " id="chart-container" style="width:980px;height:400px;border:1px solid #ddd;margin:10px auto 0;">
+  <p id="title" style="text-align:center;font-size:31px;font-weight:300;margin-bottom:15px;margin-top:25px;">EPM报告</p>
+  <div class="chart-container " id="chart-container" style="width:980px;height:400px;border:1px solid #9d9d9d;margin:10px auto 0;">
 
   </div>
 
-  <table style="border-collapse:collapse;border:1px solid #ddd;margin:15px auto;font-size:14px;text-align:center">
+  <table style="border-collapse:collapse;border:1px solid #9d9d9d;margin:25px auto 20px;;font-size:14px;text-align:center">
     <thead style="font-weight:300">
     <tr>
-      <th rowspan="2" style="padding:0px 15px;border:1px solid #ddd;text-align:center;font-weight:300;font-size:20px;color:#5FA9DA">
+      <th rowspan="2" style="padding:0px 15px;border:1px solid #9d9d9d;text-align:center;font-weight:300;font-size:20px;color:#5FA9DA">
         <%= datas[:kpi_name]%></th>
-      <th colspan="3" style="border:1px solid #ddd;color:#ee6565;padding:9px 8px;font-weight:300"><%= datas[:entity_group_name]%></th>
+      <th colspan="3" style="border:1px solid #9d9d9d;color:#ee6565;padding:9px 8px;font-weight:300"><%= datas[:entity_group_name]%></th>
     </tr>
     <tr>
-      <td style="border:1px solid #ddd;padding:12px 10px;">current</td>
-      <td style="border:1px solid #ddd;padding:12px 10px;">target-max</td>
-      <td style="border:1px solid #ddd;padding:12px 10px;">target-min</td>
+      <td style="border:1px solid #9d9d9d;padding:12px 10px;">current</td>
+      <td style="border:1px solid #9d9d9d;padding:12px 10px;">target-max</td>
+      <td style="border:1px solid #9d9d9d;padding:12px 10px;">target-min</td>
     </tr>
     </thead>
     <tbody style="color:#5f5f5f;font-weight:300" id="table-data">
