--- a/app/views/templates/demo_pdf.html.erb
+++ b/app/views/templates/demo_pdf.html.erb
@@ -28,7 +28,7 @@
 
   </div>
 
-  <table style="border-collapse:collapse;border:1px solid #9d9d9d;margin:25px auto 20px;;font-size:14px;text-align:center">
+  <table style="width:980px;border-collapse:collapse;border:1px solid #9d9d9d;margin:25px auto 20px;;font-size:14px;text-align:center">
     <thead style="font-weight:300">
     <tr>
       <th rowspan="2" style="padding:0px 15px;border:1px solid #9d9d9d;text-align:center;font-weight:300;font-size:20px;color:#5FA9DA">
@@ -41,7 +41,7 @@
       <td style="border:1px solid #9d9d9d;padding:12px 10px;">target-min</td>
     </tr>
     </thead>
-    <tbody style="color:#5f5f5f;font-weight:300" id="table-data">
+    <tbody style="color:#9d9d9d;font-weight:300" id="table-data">
     </tbody>
   </table>
 </div>
