--- a/app/views/templates/demo_pdf.html.erb
+++ b/app/views/templates/demo_pdf.html.erb
@@ -23,7 +23,7 @@
 <body>
 
 <div style="width:1024px;margin:0 auto;">
-  <p id="title" style="text-align:center;font-size:31px;font-weight:300;margin-bottom:15px;margin-top:25px;">EPM报告</p>
+  <p id="title" style="text-align:center;font-size:31px;font-weight:300;margin-bottom:15px;margin-top:25px;"><%= t 'epm_report.title'%></p>
   <div class="chart-container " id="chart-container" style="width:980px;height:400px;border:1px solid #9d9d9d;margin:10px auto 0;">
 
   </div>
@@ -36,9 +36,9 @@
       <th colspan="3" style="border:1px solid #9d9d9d;color:#ee6565;padding:9px 8px;font-weight:300"><%= datas[:entity_group_name]%></th>
     </tr>
     <tr>
-      <td style="border:1px solid #9d9d9d;padding:12px 10px;">current</td>
-      <td style="border:1px solid #9d9d9d;padding:12px 10px;">target-max</td>
-      <td style="border:1px solid #9d9d9d;padding:12px 10px;">target-min</td>
+      <td style="border:1px solid #9d9d9d;padding:12px 10px;"><%= t 'epm_report.current'%></td>
+      <td style="border:1px solid #9d9d9d;padding:12px 10px;"><%= t 'epm_report.target_max'%></td>
+      <td style="border:1px solid #9d9d9d;padding:12px 10px;"><%= t 'epm_report.target_min'%></td>
     </tr>
     </thead>
     <tbody style="color:#9d9d9d;font-weight:300" id="table-data">
@@ -65,7 +65,10 @@
       for(var i in data.current){
           var row = $('<tr></tr>');
           var date = standardParse(data.date[i]).date;
-          row.append('<td style="padding:8px;border:1px solid #ddd;color:#000">'+date.toWayneString().day+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.current[i]+data.unit[i]+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.target_max[i]+data.unit[i]+'</td>').append('<td style="padding:8px;border:1px solid #ddd;">'+data.target_min[i]+data.unit[i]+'</td>');
+          row.append('<td style="padding:8px;border:1px solid #9d9d9d;color:#000">'+date.toWayneString().day+'</td>')
+                  .append('<td style="padding:8px;border:1px solid #9d9d9d;">'+data.current[i]+data.unit[i]+'</td>')
+                  .append('<td style="padding:8px;border:1px solid #9d9d9d;">'+data.target_max[i]+data.unit[i]+'</td>')
+                  .append('<td style="padding:8px;border:1px solid #9d9d9d;">'+data.target_min[i]+data.unit[i]+'</td>');
           $("#table-data").append(row);
       }
   }
