--- a/app/views/entity_groups/_left_menu.html.erb
+++ b/app/views/entity_groups/_left_menu.html.erb
@@ -9,8 +9,10 @@
                     </li>
       <%@entity_groups.each do |entity_group|%>
           <li  class="<%= entity_group.id==@active_entity_group_id ? 'active' : ''%>" title="<%= entity_group.name %>" number="<%= entity_group.id%>">
-              <i class="icon-trash icon-item"></i>
-              <a href="/entity_groups?p=<%= entity_group.id%>"><%= entity_group.name %></a>
+	  <% unless entity_group.is_public%>
+	      <i class="icon-trash icon-item"></i>
+	  <%end%>
+	      <a href="/entity_groups?p=<%= entity_group.id%>" public='<%= entity_group.is_public%>'><%= entity_group.name %></a>
           </li>
      <%end%>
 </ul>
