resize api analytics

--- a/app/views/api/kpi_entries/analyse.html.erb
+++ b/app/views/api/kpi_entries/analyse.html.erb
@@ -27,10 +27,10 @@
           $(window).resize(function(){
               if ($("#chart-container").highcharts()) {
                   var chart = $("#chart-container").highcharts();
-                  var $div=$("#chart-body").parent();
+                  var $window=$(window);
                   chart.setSize(
-                          $div.width(),
-                          $div.height(),
+                          $window.width(),
+                          $window.height(),
                           false
                   );
               }
