--- a/app/views/api/kpi_entries/analyse.html.erb
+++ b/app/views/api/kpi_entries/analyse.html.erb
@@ -24,18 +24,18 @@
 <script>
      $(document).ready(function() {
           prepare_form_cchart();
-          $(window).resize(function(){
-              if ($("#chart-container").highcharts()) {
-                  var chart = $("#chart-container").highcharts();
-                  var $window=$(window);
-                  chart.setSize(
-                          $window.width(),
-                          $window.height(),
-                          false
-                  );
-              }
-          });
      });
+     function orientationChange(){
+         if ($("#chart-container").highcharts()) {
+             var chart = $("#chart-container").highcharts();
+             var $window=$(window);
+             chart.setSize(
+                     $window.width(),
+                     $window.height(),
+                     false
+             );
+         }
+     }
      function prepare_form_cchart() {
           var data = jQuery.parseJSON($("#data-hidden").val());
           var kpi = $("#kpi-id-hidden").val();
