--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -7,7 +7,7 @@
       <li>
         <a href="/"> <span><%= t 'menu.start' %></span> </a>
 	</li>
-	<% if Role.admin?(current_user.role_id)%>
+	<% if current_user.admin?%>
       <li class="relative">
         <a> <span guide-name="mange_menu"><%= t 'menu.manage' %></span></a>
         <ul class="nav-manage-sub">
@@ -27,16 +27,16 @@
 	</li>
     <%end%>
       <li>
-        <a href="<%= dashboards_path %>" guide-name="dashboard_menu"> <span><%= t 'menu.dashboard' %></span> </a>
-      </li>
-      <li>
-        <a href="<%= analyse_kpi_entries_path %>" guide-name="analyze_menu"> <span><%= t 'menu.analytics' %></span> </a>
-      </li>
-      <li>
         <a guide-name="report_menu"  href="<%= entity_groups_path %>"> <span><%= t 'menu.my_view' %></span></a>
       </li>
       <li>
         <a guide-name="report_menu"  href="<%= entity_groups_path %>"> <span><%= t 'menu.my_kpi' %></span></a>
+      </li>
+      <li>
+        <a href="<%= dashboards_path %>" guide-name="dashboard_menu"> <span><%= t 'menu.dashboard' %></span> </a>
+      </li>
+      <li>
+        <a href="<%= analyse_kpi_entries_path %>" guide-name="analyze_menu"> <span><%= t 'menu.analytics' %></span> </a>
       </li>
       <li><a>
         <span>&nbsp;</span>
