--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -32,9 +32,11 @@
       <li>
         <a guide-name="report_menu"  href="<%= entity_groups_path %>"> <span><%= t 'menu.my_kpi' %></span></a>
       </li>
+      <%if current_user.director?%>
       <li>
         <a href="<%= dashboards_path %>" guide-name="dashboard_menu"> <span><%= t 'menu.dashboard' %></span> </a>
       </li>
+      <%end%>
       <li>
         <a href="<%= analyse_kpi_entries_path %>" guide-name="analyze_menu"> <span><%= t 'menu.analytics' %></span> </a>
       </li>
