api and draggable

--- a/app/assets/stylesheets/treeview.css
+++ b/app/assets/stylesheets/treeview.css
@@ -117,3 +117,11 @@ a.just-line + ul {
 a.just-line + ul:before {
         height: 74px;
 }
+
+.draggable {
+    position:relative;
+}
+
+.draggable li{
+    position:relative;
+}
