--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -44,7 +44,7 @@
         <span>&nbsp;</span>
       </a></li>
       <li>
-        <a href="<%= new_kpi_entry_path %>" guide-name="entry_menu"> <span><%= t 'menu.entry_kpi' %></span> </a>
+        <a href="<%= kpi_entries_path %>" guide-name="entry_menu"> <span><%= t 'menu.entry_kpi' %></span> </a>
       </li>
     </ul>
 
