--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,12 +6,9 @@
     </div>
 
     <div class="manage-left-content" id="manage-left-content">
-      <%= render :partial => 'entities/left_menu' %>
+      <%= render :partial => 'roles/left_menu' %>
 
       <div class="manage-right-content" id="manage-right-content">
-        <div class="manage-btn-group" id="manage-btn-group">
-          <p id="manage-edit-target"></p>
-        </div>
         <div class="manage-right-list">
           <div class="right-list-top-control" id="right-list-top-control" name="group">
             <input type="checkbox" id="manage-total-check"/>
