--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -2,58 +2,13 @@
 <%= javascript_include_tag "jquery-collision.min.js"%>
 <%= javascript_include_tag "jquery.ui/jquery.draggable.js"%>
 <% end %>
-<div class="tree">
-  <ul class="draggable">
-    <li>
-      <a href="#">President Director <br/>Tetsuo Nakai</a>
-      <ul>
-        <li>
-          <a href="#">
-            HR &amp; Administration<br/>
-            Heli Neo<br/>Manager</a>
-          <ul>
-            <li>
-              <a href="#">IT Administrator <br/>Ericson Ginting<br/>Assistant Manager</a>
-              <ul>
-                <li>
-                  <a href="#">IT Engineer <br/>I Wayan Purushottama<br/>Engineer</a>
-                  <ul>
-                    <li>
-                      <a href="#">IT Support<br/>Juanda F Butar Butar<br/>Assistant Engineer</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="#" class="just-line"><br/><br/><br/></a>
-                  <ul>
-                    <li>
-                      <a href="#">IT Support<br/>David Alwis<br/>Assistant Engineer</a>
-                      <ul>
-                        <li>
-                          <a href="#">IT Support<br/>Nico Simanjuntak<br/>Technician</a>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-  <ul class="draggable">
 
-  </ul>
-</div>
 <% @entity_groups.each do |e|%>
 <div class="tree">
   <ul class="draggable">
-    <li>
-      <a>e.name</a>
+    <li entity_group="<%= e.id %>">
+      <a><%= e.name%></a>
     </li>
-
   </ul>
 </div>
 <% end %>
