--- a/app/views/shares/_menu.html.erb
+++ b/app/views/shares/_menu.html.erb
@@ -12,7 +12,7 @@
         <a> <span guide-name="mange_menu"><%= t 'menu.manage' %></span></a>
         <ul class="nav-manage-sub">
            <li>
-            <a href="<%= kpis_path %>"><%= t 'menu.entity' %></a>
+            <a href="<%= departments_path %>"><%= t 'menu.entity' %></a>
           </li>
           <li>
             <a href="<%= kpis_path %>"><%= t 'menu.kpi' %></a>
